# simMetrics

./: .gitattributes  .gitignore  Cargo.toml  README.md  test.mol
.github/workflows/: bench.yml
benches/: similarity_metrics.rs
src/: cluster.rs  dist.rs  lib.rs  load.rs  measures.rs
tests/: .gitignore  clusters.json  fps.json  genClusters.rs  test.mol
