[package]
name = "similarity_metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
openbabel = "0.5.3"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
debug = 1

[[bench]]
name = "similarity_metrics"
harness = false
