[package]
name = "sim-metrics"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Implementation of chemical similarity metrics"
homepage = "https://github.com/Quantalabs/simMetrics"
repository = "https://github.com/Quantalabs/simMetrics"
readme = "README.md"

[dependencies]
ndarray = "0.16.1"
openbabel = "0.5.3"
petal-clustering = "0.12.0"
petal-neighbors = "0.13.0"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
serde_json = "1.0.140"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
debug = 1

[[bench]]
name = "similarity_metrics"
harness = false
